with source finder

--- a/docstr_md/python/compilers/sklearn_templates/head.html
+++ b/docstr_md/python/compilers/sklearn_templates/head.html
@@ -3,6 +3,9 @@
 <link rel="stylesheet" href="https://assets.readthedocs.org/static/css/readthedocs-doc-embed.css" type="text/css" />
 
 <style>
+    a.src-href {
+        float: right;
+    }
     p.attr {
         margin-top: 0.5em;
         margin-left: 1em;
