--- a/docstr_md/python/compilers/sklearn_templates/header.html
+++ b/docstr_md/python/compilers/sklearn_templates/header.html
@@ -1,3 +1,3 @@
 <p class="func-header">
-    <i>{pfx}</i> {import_path}<b>{name}</b>(<i>{args}</i>)
+    <i>{pfx}</i> {import_path}<b>{name}</b>(<i>{args}</i>) {src_href}
 </p>
