--- a/docstr_md/python/compilers/sklearn_templates/field.html
+++ b/docstr_md/python/compilers/sklearn_templates/field.html
@@ -1,4 +1,4 @@
-<tr class="field">
-    <th class="field-name"><b>{name}:</b></td>
-    <td class="field-body" width="100%">{items}</td>
+<tr>
+    <th ><b>{name}:</b></th>
+    <td  width="80%">{items}</td>
 </tr>
